--- a/BreadAndWine/Info.plist
+++ b/BreadAndWine/Info.plist
@@ -14,6 +14,12 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
+		<string>processing</string>
+		<string>fetch</string>
 	</array>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+<array>
+    <string>com.devotionalapp.nuggetFetch</string>
+</array>
 </dict>
 </plist>
